<resources>
    <string name="app_name">DGNightStand2020</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="alles_aus">a aus</string>
    <string name="unten_aus">u aus</string>
    <string name="oben_aus">o aus</string>
    <string name="alles_an">a an</string>
    <string name="unten_an">u an</string>
    <string name="oben_an">o an</string>
    <string name="mar">MAR</string>
    <string name="so">SO</string>
    <string name="_33">-33</string>
    <string name="c">*C</string>
    <string name="colon">:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_23">23.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="text_filler">TEXT FILLER</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="o">O</string>
    <string name="u">U</string>
</resources>