<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/r1"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:text="@string/_33"
                android:textAlignment="textEnd"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:text="@string/c"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:text="@string/so"
                android:textAlignment="textEnd"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:text="23."
                android:textAlignment="textEnd"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:text="@string/mar"
                android:textAlignment="textStart"
                android:textColor="#2B602B"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="160dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/h1"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:fontFamily="@font/famirids"
                android:text="0"
                android:textColor="#2B602B"
                android:textSize="150sp" />

            <TextView
                android:id="@+id/h2"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_vertical"
                android:text="1"
                android:textColor="#2B602B"
                android:textSize="150sp"
                tools:text="3" />

            <TextView
                android:id="@+id/colon"
                android:layout_width="70dp"
                android:layout_height="160dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/colon"
                android:textColor="#2B602B"
                android:textSize="150sp"
                tools:text=":" />

            <TextView
                android:id="@+id/m1"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:fontFamily="@font/famirids"
                android:gravity="end|center_vertical"
                android:text="1"
                android:textColor="#2B602B"
                android:textSize="150sp"
                tools:text="1" />

            <TextView
                android:id="@+id/m2"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_vertical"
                android:text="7"
                android:textColor="#2B602B"
                android:textSize="150sp"
                tools:text="1" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:orientation="vertical">

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#588658"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#588658"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/a_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#2B602B"
                    android:fontFamily="@font/famirids"
                    android:text="L"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="@font/famirids"
                android:paddingTop="35dp"
                android:textColor="#2B602B"
                android:textSize="46sp" />

            <Button
                android:id="@+id/b_an"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#2B602B"
                android:fontFamily="@font/famirids"
                android:text="M"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:fontFamily="@font/famirids"
                android:textAlignment="center"
                android:textColor="#588658"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/c_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#2B602B"
                    android:fontFamily="@font/famirids"
                    android:text="R"
                    android:textSize="18sp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/r6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#588658"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/famirids"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#588658"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text=""
        android:textColor="#588658"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/famirids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/dummy_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>